// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Resizable Card Layout Card resize in horizontal and vertical directions 1`] = `
<div
  class="fd-resizable-card fd-resizable-card__resize--indication-border"
  id="one"
>
  
        
  <div
    class="fd-resizable-card__resize__handle--vertical-handle"
  />
  
        
  <div
    class="fd-resizable-card__card"
  >
    
            
    <div
      aria-label="List Card Example 4"
      class="fd-card"
      role="region"
    >
      
                
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                    
        <div
          class="fd-card__header-text"
        >
          
                        
          <div
            class="fd-card__title-area"
          >
            
                            
            <div
              class="fd-card__title"
            >
              Quick Links
            </div>
            
                            
            <span
              class="fd-object-status fd-card__counter"
            >
              4 of 20
            </span>
            
                        
          </div>
          
                    
        </div>
        
                
      </a>
      
                
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                    
        <ul
          class="fd-list fd-list--no-border"
          role="list"
        >
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--cart"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--wrench"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--leads"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--batch-payments"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                        
          </li>
          
                    
        </ul>
        
                
      </div>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-resizable-card__resize__handle--horizontal-handle"
  />
  
        
  <div
    class="fd-resizable-card__resize--icon fd-resizable-card__resize__cursor--both"
  />
  
    
</div>
`;

exports[`Storyshots Layouts/Resizable Card Layout Card resize in horizontal directions 1`] = `
<div
  class="fd-resizable-card fd-resizable-card__resize--indication-border"
  id="two"
>
  
        
  <div
    class="fd-resizable-card__resize__handle--vertical-handle"
  />
  
        
  <div
    class="fd-resizable-card__card"
  >
    
            
    <div
      aria-label="List Card Example 5"
      class="fd-card"
      role="region"
    >
      
                
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                    
        <div
          class="fd-card__header-text"
        >
          
                        
          <div
            class="fd-card__title-area"
          >
            
                            
            <div
              class="fd-card__title"
            >
              Quick Links
            </div>
            
                            
            <span
              class="fd-object-status fd-card__counter"
            >
              4 of 20
            </span>
            
                        
          </div>
          
                    
        </div>
        
                
      </a>
      
                
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                    
        <ul
          class="fd-list fd-list--no-border"
          role="list"
        >
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--cart"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--wrench"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--leads"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--batch-payments"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                        
          </li>
          
                    
        </ul>
        
                
      </div>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-resizable-card__resize--icon fd-resizable-card__resize__cursor--horizontal"
  />
  
    
</div>
`;

exports[`Storyshots Layouts/Resizable Card Layout Card resize in vertical directions 1`] = `
<div
  class="fd-resizable-card fd-resizable-card__resize--indication-border"
  id="three"
>
  
        
  <div
    class="fd-resizable-card__card"
  >
    
            
    <div
      aria-label="List Card Example 6"
      class="fd-card"
      role="region"
    >
      
                
      <a
        class="fd-card__header"
        tabindex="0"
      >
        
                    
        <div
          class="fd-card__header-text"
        >
          
                        
          <div
            class="fd-card__title-area"
          >
            
                            
            <div
              class="fd-card__title"
            >
              Quick Links
            </div>
            
                            
            <span
              class="fd-object-status fd-card__counter"
            >
              4 of 20
            </span>
            
                        
          </div>
          
                    
        </div>
        
                
      </a>
      
                
      <div
        aria-label="Card Content"
        class="fd-card__content"
        role="group"
      >
        
                    
        <ul
          class="fd-list fd-list--no-border"
          role="list"
        >
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--cart"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--wrench"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--leads"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                        
          </li>
          
                        
          <li
            class="fd-list__item"
            role="listitem"
            tabindex="0"
          >
            
                            
            <i
              class="fd-list__icon sap-icon--batch-payments"
              role="presentation"
            />
            
                            
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                        
          </li>
          
                    
        </ul>
        
                
      </div>
      
            
    </div>
    
        
  </div>
  
        
  <div
    class="fd-resizable-card__resize__handle--horizontal-handle"
  />
  
        
  <div
    class="fd-resizable-card__resize--icon fd-resizable-card__resize__cursor--vertical"
  />
  
    
</div>
`;
